tests/errors/use_before_declare.x
d = 12

g = d + a

a = 13
